added author to package.json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/haleboat/express-a2.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alex Hale",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/haleboat/express-a2/issues"
